# object_files

./: CMakeLists.txt  package.xml  screwdriver.ply
ply/: battery.ply  bin3.ply  bin4.ply  bin5.ply  bin6.ply  lift_hole_adapter.ply  long_marker.ply  m12_bolt.ply  nail_polish.ply  nut.ply  screwdriver.ply  small_marker.ply
stl/: battery.stl  bin.STL  bin.stl  bin3.stl  bin4.stl  bin5.stl  bin6.stl  chessboard_holder.stl  lift_hole_adapter.stl  long_marker.stl  m10_bolt.stl  m12_bolt.stl  nail_polish.stl  nut.stl  screwdriver.stl  small_marker.stl
